zwave/eu/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zwave
spec:
  template:
    spec:
      # containers:
        # - name: zwave
          # command: [sleep, "30000"]
        #   env:
        #     - name: BUCKET_KEY
        #       value: pink_eu
      nodeSelector:
        kubernetes.io/hostname: k3s.cns.me
      volumes:
        - name: config
          secret:
            secretName: zwave2mqtt-eu
        - name: zwavestick
          hostPath:
            path: /dev/serial/by-id/usb-0658_0200-if00
            type: CharDevice
