zwave/eu/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwave
spec:
  selector:
    zwave: eu
